# DAQ

./: .ccsproject  .cproject  .gitignore  .gitlab-ci.yml  .gitmodules  .project  CMakeLists.txt  LICENSE  README.md  plot.py
Design documents/: Design Journal.docx  Shéma-Bloc.graphml
Firmware/: Firmware_Design_Journal.docx  flow_chart.graphml  frames_list.xml  profile_xbee_default.xml  profile_xbee_xctu.xml  profile_xbee_xctu_modified.xml  send_serial.py
Firmware_DAQ_CCS/: .cproject  .project  main.c
HLK-RM04 Support Files/: HLK-RM04_CONFIG.rar  RM04_kit_V2.3_99se.rar  sscom.ini
PolyERacingTelemetrie_Android/: .project  AndroidManifest.xml
Testing/: Données du test WI-FI deuxième partie.docx  Données du test WI-FI troisième partie.docx  Données du test WI-FI.docx  Plan de test deuxième partie.docx  Plan de test.docx
doc/: DAQ_v3_DR1.pptx  DAQ_v3_schema.graphml
include/: SD_mng.h  can.h  can_mng.h  command_mng.h  commands.h  config.h  daq.h  eeprom_mng.h  globals.h  globals_lib.h  io_lib.h  led.h  ringbuffer.h  sdcard.h  tick.h  utils.h  xbee.h
pcb/: Accelerometer.SchDoc  CAN.SchDoc  Connectors.SchDoc  DAQ_Module.OutJob  GPS.SchDoc  MCU.SchDoc  MCU_tiva.SchDoc  Module_wifi.PrjPcb  PowerSupplies.SchDoc  SD.SchDoc  SD_card.SchDoc  WifiModule.SchDoc  daq.PcbDoc  daq.PrjPcb  module_wifi.PcbDoc.htm  module_wifi.SchDoc  (+1 more)
scripts/: reader.py  (+1 more)
tests/buffer/: CMakeLists.txt  buffer_flush.c  buffer_init.c  buffer_insert.c  circular_init.c  circular_insert.c  entry_init.c
tests/ringbuffer/: CMakeLists.txt  message.c  message.h  ringbuffer_init.c  ringbuffer_insert.c
(+174 files in other folders)
